added swagger for health
